<resources>
    <string name="app_name">AndroidApps</string>
    <string name="wan_android">玩Android</string>
    <string name="search">搜索</string>
    <string name="to_login">去登陆</string>
    <string name="level">等级：--</string>
    <string name="rank">排名：--</string>

    <string name="my_score">我的积分</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_share">我的分享</string>
    <string name="todo">TODO</string>
    <string name="night_model">夜间模式</string>
    <string name="system_setting">系统设置</string>
    <string name="username_error_tip">用户名不能为空</string>
    <string name="password_error_tip">密码不能为空</string>
    <string name="login">登录</string>
    <string name="login_title">用户登录</string>
    <string name="login_tip">请使用WanAndroid账号登录!</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="to_register">没有账号？去注册</string>
    <string name="register">注册</string>
    <string name="registered_user">注册用户</string>
    <string name="register_tip">用户注册后才可以登录</string>
    <string name="confirm_password">确认密码</string>
    <string name="go_to_login">已有账户？去登录</string>
    <string name="confirm_password_error_tip">确认密码不能为空</string>
    <string name="password_length_error_tip">密码长度6~20位</string>
    <string name="password_not_equals">两次输入密码不一致</string>



    <string-array name="main_tab_titles">
        <item>首页</item>
        <item>广场</item>
        <item>公众号</item>
        <item>体系</item>
        <item>项目</item>
    </string-array>
</resources>