<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <item
        android:id="@+id/menu_score"
        android:title="@string/my_score"
        android:icon="@drawable/ic_baseline_euro_24"/>
    <item
        android:id="@+id/menu_favorite"
        android:title="@string/my_favorite"
        android:icon="@drawable/ic_baseline_favorite_border_24"/>
    <item
        android:id="@+id/menu_share"
        android:title="@string/my_share"
        android:icon="@drawable/ic_baseline_share_24"/>
    <item
        android:id="@+id/menu_todo"
        android:title="@string/todo"
        android:icon="@drawable/ic_baseline_fact_check_24"/>
    <item
        android:id="@+id/menu_night"
        android:title="@string/night_model"
        android:icon="@drawable/ic_baseline_nights_stay_24"/>
    <item
        android:id="@+id/menu_setting"
        android:title="@string/system_setting"
        android:icon="@drawable/ic_baseline_settings_24"/>

</menu>