<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center"
    android:foreground="?attr/selectableItemBackground"
    android:paddingVertical="10dp"
    tools:ignore="UnusedAttribute">
    >
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/iv_avatar"
        app:tint="@color/white"
        android:src="@drawable/ic_avatar"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_login"
        android:text="@string/to_login"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:padding="10dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_level"
            android:text="@string/level"
            android:textColor="@color/white"
            android:textSize="12sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rank"
            android:text="@string/rank"
            android:layout_marginStart="10sp"
            android:textColor="@color/white"
            android:textSize="12sp"/>
    </LinearLayout>

</LinearLayout>